@@ -1,3 +1,8 @@
+2020-10-17
+- add support for >=, <= comparators. #256. Thanks to piorek94
+- Fix yacc/bison warnings. Cleanup unused tokens
+- Fix syntax error 'flags AS' as AS is a reserved word. #255
+
 2020-09-12
 - Cleanup nip/xip filter syntax. Add filter syntax 'nip in [ <iplist>]'. Request #246
 
